--- a/src/style.css
+++ b/src/style.css
@@ -1,90 +1,121 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+	--cl-primary: #fb7299;
+	--cl-pink: #fb7299;
+	--cl-red: #f00;
+	--cl-yellow: #FEC107;
+	--cl-green: #8BC24B;
+	--cl-blue: #2095F4;
+	--cl-purple: #9B27B0;
+	--cl-black: #141414;
+	--cl-white: #fff;
+	--cl-lucency: rgba(0, 0, 0, 0);
+	--cl-white-75: rgba(250, 250, 250, .75);
+	--cl-white-50: rgba(250, 250, 250, .5);
+	--cl-white-25: rgba(250, 250, 250, .25);
+	--cl-white-10: rgba(250, 250, 250, .1);
+	--cl-black-75: rgba(0, 0, 0, .75);
+	--cl-black-50: rgba(0, 0, 0, .5);
+	--cl-black-25: rgba(0, 0, 0, .25);
+	--cl-black-10: rgba(0, 0, 0, .1);
+}
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+html.pink {
+	--cl-primary: var(--cl-pink);
+	--el-color-primary: var(--cl-pink) !important;
+}
+html.red {
+	--cl-primary: var(--cl-red);
+	--el-color-primary: var(--cl-red) !important;
+}
+html.yellow {
+	--cl-primary: var(--cl-yellow);
+	--el-color-primary: var(--cl-yellow) !important;
+}
+html.green {
+	--cl-primary: var(--cl-green);
+	--el-color-primary: var(--cl-green) !important;
+}
+html.blue {
+	--cl-primary: var(--cl-blue);
+	--el-color-primary: var(--cl-blue) !important;
+}
+html.purple {
+	--cl-primary: var(--cl-purple);
+	--el-color-primary: var(--cl-purple) !important;
+}
+html.black {
+	--cl-primary: var(--cl-black);
+	--el-color-primary: var(--cl-black) !important;
+}
+.drak {
+	color: #eee !important;
+	background: #333 !important;
+}
+.light {
+	/* color: #eee; */
+	background: #fff;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+
+
+body {
+	font-family: PingFang SC, HarmonyOS_Medium, Helvetica Neue, Microsoft YaHei, sans-serif;
+	overflow-y: hidden !important;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+	text-decoration: none;
+	color: var(--cl-black);
+
+	&:hover {
+		text-decoration: none;
+		color: var(--cl-primary);
+	}
+
+	&:active {
+		text-decoration: none;
+		color: var(--cl-black);
+	}
+
+	&:visited {
+		text-decoration: none;
+		color: var(--cl-black);
+	}
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+
+
+@font-face {
+	font-family: 'iconfont';
+	src: url('./assets/iconfont/iconfont.ttf') format('truetype'),
+		url('./assets/iconfont/iconfont.woff') format('woff'),
+		url('./assets/iconfont/iconfont.woff2') format('woff2');
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+
+
+i {
+	font-family: 'iconfont' !important;
+	font-style: normal;
+	margin-right: 8px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+
+/**
+ * Element Plus
+ */
+:root {
+	--el-color-primary: var(--cl-primary) !important;
 }
 
-code {
-  background-color: #1a1a1a;
-  padding: 2px 4px;
-  margin: 0 4px;
-  border-radius: 4px;
-}
-
-.card {
-  padding: 2em;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-  code {
-    background-color: #f9f9f9;
-  }
+.el-button {
+    margin-left: 0 !important;
 }
